--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "rascii"
+description = "Image to ASCII Art converter"
+readme = "README.md"
+repository = "https://github.com/ajmwagar/rascii"
+license = "MIT"
 version = "0.1.0"
 authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 structopt = "0.2"
-image = "*"
+image = "0.21.2"
 termcolor = "1"
